# castep-cell-io

./: .exploration_checkpoint.json  .gitignore  BLOCK_TEST_PLAN.md  CHANGELOG.md  CLASSIFICATION_TABLE.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  MIGRATION_0.4.md  PLAN.md  README.md  TEST_PLAN.md  TODOS.md  flake.nix  pyproject.toml
castep-param-io/: Cargo.toml  create_grammar.sh  grammar_newtype.sh  pest_enum.sh  pest_rule.sh  span_func.sh
castep-param-io/castep-param-derive/: Cargo.toml
castep-param-io/castep-param-derive/src/: enum_attributes.rs  lib.rs  param_display_impl.rs  strip_option.rs
castep-param-io/src/: lib.rs
castep-param-io/src/param/: mod.rs  template.rs
castep-param-io/src/param/band_structure/: bs_eigenvalue_tol.rs  bs_extra_bands.rs  bs_max_cg_steps.rs  bs_max_iter.rs  bs_nbands.rs  bs_re_est_k_scrn.rs  bs_write_eigenvalues.rs  bs_xc_functional.rs  mod.rs
castep-param-io/src/param/basis_set/: basis_de_dloge.rs  basis_precision.rs  cut_off_energy.rs  fine_gmax.rs  fine_grid_scale.rs  finite_basis_corr.rs  finite_basis_npoints.rs  finite_basis_spacing.rs  fixed_npw.rs  grid_scale.rs  mod.rs
castep-param-io/src/param/density_mixing_params/: mix_charge_amp.rs  mix_charge_gmax.rs  mix_cut_off_energy.rs  mix_history_length.rs  mix_metric_q.rs  mix_spin_amp.rs  mix_spin_gmax.rs  mixing_scheme.rs  mod.rs
castep-param-io/src/param/electro_min/: efermi_tol.rs  elec_convergence_win.rs  elec_dump_file.rs  elec_eigenvalue_tol.rs  elec_energy_tol.rs  elec_restore_file.rs  electronic_minimizer.rs  fix_occupancy.rs  max_cg_steps.rs  max_scf_cycles.rs  max_sd_steps.rs  metals_method.rs  mod.rs  num_dump_cycles.rs  num_occ_cycles.rs  smearing_scheme.rs  smearing_width.rs  spin_fix.rs
castep-param-io/src/param/electronic/: charge.rs  mod.rs  spin.rs  spin_polarised.rs
castep-param-io/src/param/general/: backup_setting.rs  calculate_props.rs  castep_task.rs  charge_unit.rs  checkpoint.rs  comment.rs  continuation.rs  data_distribution.rs  iprint.rs  mod.rs  opt_strategy.rs  page_wvfns.rs  print_clock.rs  print_memory_usage.rs  rand_seed.rs  run_time.rs  stop.rs  write_checkpoint.rs  write_props.rs
castep-param-io/src/param/geom_opt/: geom_convergence_win.rs  geom_disp_tol.rs  geom_energy_tol.rs  geom_force_tol.rs  geom_frequency_est.rs  geom_max_iter.rs  geom_method.rs  geom_modulus_est.rs  geom_preconditioner.rs  geom_spin_fix.rs  geom_stress_tol.rs  mod.rs
castep-param-io/src/param/population_analysis/: mod.rs  pdos_calculate_weights.rs  popn_bond_cutoff.rs  popn_calculate.rs  popn_write.rs
castep-param-io/src/param/pseudopotentials/: mod.rs  pspot_beta_phi_type.rs  pspot_nonlocal_type.rs  relativistic_treatment.rs
castep-param-io/src/param/units/: energy_unit.rs  force_constant_unit.rs  force_unit.rs  frequency_unit.rs  inv_length_unit.rs  length_unit.rs  mass_unit.rs  mod.rs  pressure_unit.rs  time_unit.rs  velocity_unit.rs  volume_unit.rs
castep-param-io/src/param/xc_correlation/: mod.rs  spin_polarised.rs  xc_definition.rs
castep-param-io/src/parser/: general.rs  mod.rs  param.pest
castep-param-io/src/parser/data_type/: integer.rs  logical.rs  mod.rs  real.rs
castep_cell_io/: Cargo.toml  README.md
castep_cell_io/examples/: format_demo.rs
castep_cell_io/src/: cell_document.rs  format.rs  lib.rs  param_document.rs  parse.rs  parser.rs  query.rs
castep_cell_io/src/cell/: lattice_param.rs
castep_cell_io/src/cell/bz_sampling_kpoints/: bs_kpoint_path.rs  bs_kpoint_path_spacing.rs  bs_kpoints_list.rs  kpoint.rs  kpoints_list.rs  kpoints_mp_grid.rs  kpoints_mp_offset.rs  kpoints_mp_spacing.rs  magres_kpoints_list.rs  mod.rs  optics_kpoints_list.rs  spectral_kpoint_path.rs  spectral_kpoint_path_spacing.rs  spectral_kpoints_list.rs  spectral_kpoints_mp_grid.rs  spectral_kpoints_mp_offset.rs  spectral_kpoints_mp_spacing.rs
castep_cell_io/src/cell/constraints/: cell_constraints.rs  fix_all_cell.rs  fix_all_ions.rs  fix_com.rs  fix_vol.rs  ionic_constraints.rs  mod.rs  nonlinear_constraints.rs
castep_cell_io/src/cell/external_fields/: external_efield.rs  external_pressure.rs  mod.rs
castep_cell_io/src/cell/phonon/: mod.rs  phonon_fine_kpoint_list.rs  phonon_fine_kpoint_path.rs  phonon_fine_kpoint_path_spacing.rs  phonon_fine_kpoints_mp_grid.rs  phonon_fine_kpoints_mp_offset.rs  phonon_fine_kpoints_mp_spacing.rs  phonon_gamma_directions.rs  phonon_kpoint_list.rs  phonon_kpoint_path.rs  phonon_kpoint_path_spacing.rs  phonon_kpoints_mp_grid.rs  phonon_kpoints_mp_offset.rs  phonon_kpoints_mp_spacing.rs  phonon_supercell_matrix.rs  supercell_kpoint_list_castep.rs
castep_cell_io/src/cell/positions/: mod.rs  positions_abs.rs  positions_abs_intermediate.rs  positions_abs_product.rs  positions_frac.rs  positions_frac_intermediate.rs  positions_frac_product.rs
castep_cell_io/src/cell/species/: mod.rs  quantization_axis.rs  sedc_custom_params.rs  species_lcao_states.rs  species_mass.rs  species_pot.rs  species_q.rs
castep_cell_io/src/param/: band_structure_params.rs  basis_set_params.rs  density_mixing_params.rs  electric_field_params.rs  electronic_excitations_params.rs  electronic_minimisation_params.rs  electronic_params.rs  exchange_correlation_params.rs  general_params.rs  geometry_optimization_params.rs  mod.rs  molecular_dynamics_params.rs  nmr_params.rs  optics_params.rs  phonon_params.rs  population_analysis_params.rs  pseudopotential_params.rs  solvation_params.rs  transition_state_params.rs
castep_cell_io/src/units/: efield_units.rs  energy_units.rs  force_constant_unit.rs  force_units.rs  frequency_unit.rs  inv_length_units.rs  length_units.rs  mass_units.rs  mod.rs  pressure_unit.rs  quadrupole_moment_units.rs  temperature_unit.rs  time_unit.rs  velocity_unit.rs  volume_unit.rs
castep_cell_io/tests/: mutual_exclusion_validation.rs
castep_cell_serde/: Cargo.toml
castep_cell_serde/src/: error.rs  lib.rs  parser.rs  ser.rs
castep_cell_serde/src/de/: cell.rs  mod.rs  primitive.rs
src/: error.rs  (+2 more)
(+926 files in other folders)
