[package]
name = "castep-cell-io"
version = "0.1.8"
edition = "2021"
author = ["TonyWu20"]
description = "A crate helping to parse, edit and save `castep` input file format `.cell`"
readme = "README.md"
homepage = "https://github.com/TonyWu20/castep-cell-io"
repository ="https://github.com/TonyWu20/castep-cell-io" 
license = "MIT"
keywords = ["chemistry", "castep"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castep-periodic-table = "0.5.0"
winnow = "0.6.13"
