[package]
name = "castep-cell-io"
version = "0.2.0"
edition = "2021"
author = ["TonyWu20"]
description = "A crate helping to parse, edit and save `castep` input file format `.cell`"
readme = "README.md"
homepage = "https://github.com/TonyWu20/castep-cell-io"
repository ="https://github.com/TonyWu20/castep-cell-io" 
license = "MIT"
keywords = ["chemistry", "castep"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castep-periodic-table = "0.5.0"
winnow = "0.6.13"
chemrust-core = {git = "https://github.com/TonyWu20/chemrust", branch = "refactor"}
nalgebra = "0.32.6"
