[package]
name = "castep-cell-io"
version = "0.2.17"
edition = "2021"
author = ["TonyWu20"]
description = "A crate helping to parse, edit and save `castep` input file format `.cell`"
readme = "README.md"
homepage = "https://github.com/TonyWu20/castep-cell-io"
repository ="https://github.com/TonyWu20/castep-cell-io" 
license = "MIT"
keywords = ["chemistry", "castep"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
castep-periodic-table = "0.5.2"
winnow = "0.7.6"
chemrust-core = {git = "https://github.com/TonyWu20/chemrust", branch = "refactor"}
nalgebra = "0.33.*"
crystallographic-group = "0.3.1"
thiserror = "2.0.8"
pest = "2.8.0"
from-pest = "0.3.3"
pest_derive = {version="2.8.0", features = ["grammar-extras"]}
pest-ast = { git = "https://github.com/TonyWu20/ast.git", version = "0.3.5" }
tree-sitter-pest = "0.0.2"
derive_builder = "0.20.2"

[features]
default = ["template"]
TS = []
template = []
