[project]
name = "castep-cell-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TonyWu20", email = "tony.w21@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
]
