[package]
name = "castep-cell-io"
version = "0.5.0"
edition = "2024"
authors = ["TonyWu20"]
description = "I/O library for CASTEP .cell and .param file formats"
readme = "README.md"
homepage = "https://github.com/TonyWu20/castep-cell-io"
repository = "https://github.com/TonyWu20/castep-cell-io"
license = "MIT"
keywords = ["chemistry", "castep"]

[dependencies]
castep-cell-fmt = { version = "0.1.0", path = "../castep_cell_fmt" }
bon = "3.9.1"
serde = { version = "1.0.219", features = ["derive"] }
